--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /dist
 /tmp
 /out-tsc
+# Only exists if Bazel was run
 /bazel-out
 
 # Node
@@ -11,8 +12,12 @@
 npm-debug.log
 yarn-error.log
 
+# Profiling files
+chrome-profiler-events*.json
+speed-measure-plugin*.json
+
 # IDEs and editors
-.idea/
+/.idea
 .project
 .classpath
 .c9/
@@ -30,13 +35,13 @@ yarn-error.log
 
 # Miscellaneous
 /.angular/cache
-.sass-cache/
+/.sass-cache
 /connect.lock
 /coverage
 /libpeerconnection.log
 testem.log
 /typings
 
-# System files
+# System Files
 .DS_Store
 Thumbs.db
